syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "StiktifyShopBackend.Category";

service CategoryGrpc{
	rpc GetAll(Empty) returns (Categories);
	rpc GetAllOfProduct(Id) returns (Categories);
	rpc GetAllChilren(Id) returns (Categories);
	rpc GetOne(Id) returns (Category);
	rpc Create(CreateCategory) returns (Response);
	rpc Update(Category) returns (Response);
	rpc Delete(Id) returns (Response);
	rpc DeleteMany(Ids) returns (Response);
}

message Empty{}

message CreateCategory{
	string Name = 1;
	google.protobuf.StringValue ParentId = 2;
}

message Category{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue Name = 2;
	google.protobuf.StringValue ParentId = 3;
	google.protobuf.Timestamp CreateAt = 4;
	google.protobuf.Timestamp UpdateAt = 5;
}

message Id{
	string SearchId = 1;
}

message Ids{
	repeated Id Item = 1;
}

message Categories{
	repeated Category Item = 1;
}

message Response{
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}

