syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "StiktifyShopBackend.ProductOption";

service ProductOptionGrpc{
	rpc GetAll(Empty) returns (Options);
	rpc GetAllOfProduct(Id) returns (Options);
	rpc GetOne(Id) returns (Option);
	rpc Create(CreateOption) returns (Response);
	rpc CreateManyOption(CreateOptions) returns (Response);
	rpc UpdateOption(Option) returns (Response);
	rpc DeleteOption(Id) returns (Response);
	rpc DeleteManyOption(Ids) returns (Response);
}

message Empty{}

message CreateOption{
	string ProductId = 1;
	string Image = 2;
	string Color = 3;
	string Type = 4;
	google.protobuf.StringValue Sizes = 5; 
}

message CreateOptions{
	repeated CreateOption Item = 1;
}

message Option{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue ProductId = 2;
	google.protobuf.StringValue Image = 3;
	google.protobuf.StringValue Color = 5;
	google.protobuf.StringValue Type = 6;
	google.protobuf.StringValue Sizes = 7;
	google.protobuf.Timestamp CreateAt = 8;
	google.protobuf.Timestamp UpdateAt = 9;
}

message Id{
	string SearchID = 1;
}

message Ids{
	repeated Id Item = 1;
}

message Options{
	repeated Option Item = 1;
}

message Response{
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}