syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "StiktifyShopBackend.ProductRating";

service ProductRatingGrpc{
	rpc GetAll(Empty) returns (Ratings);
	rpc GetAllOfProduct(Id) returns (Ratings);
	rpc GetAllOfOption(Id) returns (Ratings);
	rpc Create(CreateRating) returns (Response);
	rpc GetOne(Id) returns (Rating);
	rpc Update(Rating) returns (Response);
	rpc Delete(Id) returns (Response);
}

message Empty{}

message CreateRating{
	string UserId = 1;
	string ProductId = 2;
	int32 Point = 3;
	string Content = 4;
	string ProductItemId = 5;
	google.protobuf.StringValue ImageList = 6;
}

message Rating{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue ProductId = 2;
	google.protobuf.StringValue ProductItemId = 3;
	google.protobuf.StringValue UserId = 4;
	int32 Point = 5;
	google.protobuf.StringValue Content = 6;
	google.protobuf.StringValue ImageList = 7;
	google.protobuf.Timestamp CreateAt = 8;
	google.protobuf.Timestamp UpdateAt = 9;
}

message Id{
	string SearchId = 1;
}

message Link{
	string ImageUri = 1;
}

message Links{
	repeated Link Item = 1;
}

message Ratings{
	repeated Rating Item = 1;
}

message Response{
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}