syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "StiktifyShopBackend.Shop";

service ShopGrpc{
	rpc GetAll(Empty) returns (Shops);
	rpc GetOne(Id) returns (Shop);
	rpc GetOfUser(Id) returns (Shop);
	rpc Create(CreateShop) returns (Response);
	rpc Update(Shop) returns (Response);
	rpc Delete(Id) returns (Response);
}

message Empty{}

message CreateShop{
	string UserId = 1;
	string ShopName = 2;
	string Location = 3;
	string Avatar = 4;
	google.protobuf.StringValue ShopType = 5;
	bool IsBanned = 6;
}

message Id{
	string SearchId = 1;
}

message Shop{
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue UserId = 2;
	google.protobuf.StringValue Location = 3;
	google.protobuf.StringValue ShopName = 4;
	google.protobuf.StringValue ShopType = 5;
	google.protobuf.StringValue Avatar = 6;
	bool IsBanned = 7;
	double Rating = 8;
	google.protobuf.Timestamp CreateAt = 9;
	google.protobuf.Timestamp UpdateAt = 10;
}

message Shops{
	repeated Shop Item = 1;
}

message Response{
	int32 StatusCode = 1;
	google.protobuf.StringValue Message = 2;
}